--- a/homepage/Aboutus.html
+++ b/homepage/Aboutus.html
@@ -76,7 +76,7 @@
 
       <!-- Creator 2 -->
       <div class="creator-card bg-[#f0f2f4] p-6 rounded-xl text-center">
-        <img src="Jp.jpeg" alt="Creator 2" class="creator-image mx-auto rounded-full mb-4 w-32 h-32 object-cover" />
+        <img src="Jp.png" alt="Creator 2" class="creator-image mx-auto rounded-full mb-4 w-32 h-32 object-cover" />
         <h2 class="text-xl font-semibold mb-2">Aaryan Jp</h2>
         <p class="text-sm text-[#637588]">Backend Developer</p>
         <p class="mt-2 text-sm">Aaryan specializes in server-side logic and database management to ensure seamless functionality.</p>
